Full report creation implementation utilizing JWT token authorization for registered users (@sdsu.edu)