@@ -6,33 +6,37 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
-import java.util.List;
-
-import static com.sdsucrimereporter.dbapi.constant.Constant.X_REQUESTED_WITH;
-import static org.springframework.http.HttpHeaders.*;
-import static org.springframework.http.HttpHeaders.ACCESS_CONTROL_ALLOW_CREDENTIALS;
-import static org.springframework.http.HttpMethod.*;
-import static org.springframework.http.HttpMethod.OPTIONS;
+import java.util.Arrays;
 
 @Configuration
 public class CorsConfig {
 
-    @Bean
-    public CorsFilter corsFilter() {
-        var urlBasedCorsConfigurationSource = new UrlBasedCorsConfigurationSource();
-        var corsConfiguration = new CorsConfiguration();
-        corsConfiguration.setAllowCredentials(true);
-        corsConfiguration
-                .setAllowedOrigins(List.of("http://localhost:3000", "http://localhost:4200", "http://localhost:5173"));
-        corsConfiguration.setAllowedHeaders(List.of(ORIGIN, ACCESS_CONTROL_ALLOW_ORIGIN, CONTENT_TYPE, ACCEPT,
-                AUTHORIZATION, X_REQUESTED_WITH, ACCESS_CONTROL_REQUEST_METHOD, ACCESS_CONTROL_REQUEST_HEADERS,
-                ACCESS_CONTROL_ALLOW_CREDENTIALS));
-        corsConfiguration.setExposedHeaders(List.of(ORIGIN, ACCESS_CONTROL_ALLOW_ORIGIN, CONTENT_TYPE, ACCEPT,
-                AUTHORIZATION, X_REQUESTED_WITH, ACCESS_CONTROL_REQUEST_METHOD, ACCESS_CONTROL_REQUEST_HEADERS,
-                ACCESS_CONTROL_ALLOW_CREDENTIALS));
-        corsConfiguration.setAllowedMethods(
-                List.of(GET.name(), POST.name(), PUT.name(), PATCH.name(), DELETE.name(), OPTIONS.name()));
-        urlBasedCorsConfigurationSource.registerCorsConfiguration("/**", corsConfiguration);
-        return new CorsFilter(urlBasedCorsConfigurationSource);
-    }
+        @Bean
+        public CorsFilter corsFilter() {
+                UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+                CorsConfiguration config = new CorsConfiguration();
+
+                // Allow credentials (cookies, authorization headers)
+                config.setAllowCredentials(true);
+
+                // Allow your frontend origin
+                config.setAllowedOriginPatterns(Arrays.asList("http://localhost:5173", "http://localhost:*"));
+
+                // Allow all headers
+                config.addAllowedHeader("*");
+
+                // Allow all HTTP methods (GET, POST, PUT, DELETE, OPTIONS, etc.)
+                config.addAllowedMethod("*");
+
+                // Expose these headers to the browser
+                config.setExposedHeaders(Arrays.asList(
+                                "Authorization",
+                                "Content-Type",
+                                "X-Requested-With",
+                                "Access-Control-Allow-Origin",
+                                "Access-Control-Allow-Credentials"));
+
+                source.registerCorsConfiguration("/**", config);
+                return new CorsFilter(source);
+        }
 }
